utf8 and input stream fix